tests/error_handling/syntax_errors/test1.lang
main() {
    Int f = 100;
    if f > 5 { // prediacte is not inside paranthesis
        print "f is large";
    }
}